feat: update canny user token api
