# core-library/pkg/generated/social_service/v2/request_response.pb.validate.go
@@ -20650,7 +20650,16 @@ func (m *GetCannyUserSSOTokenRequest) validate(all bool) error {
 		errors = append(errors, err)
 	}
 
-	// no validation rules for AccountType
+	if utf8.RuneCountInString(m.GetEmail()) < 1 {
+		err := GetCannyUserSSOTokenRequestValidationError{
+			field:  "Email",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
 
 	if len(errors) > 0 {
 		return GetCannyUserSSOTokenRequestMultiError(errors)
