# swagger/apidocs.swagger.json
@@ -777,7 +777,7 @@
         ]
       }
     },
-    "/api/v1/user/{userId}/canny/account-type/{accountType}": {
+    "/api/v1/user/{userId}/canny/email/{email}": {
       "get": {
         "summary": "Retrieves user sso token for canny",
         "description": "Fetches a user sso token for canny",
@@ -822,16 +822,10 @@
             "type": "string"
           },
           {
-            "name": "accountType",
-            "description": "Indicates the profile type to be queried.\nFor example: \"username:testuser\"",
+            "name": "email",
             "in": "path",
             "required": true,
-            "type": "string",
-            "enum": [
-              "ACCOUNT_TYPE_UNSPECIFIED",
-              "ACCOUNT_TYPE_USER",
-              "ACCOUNT_TYPE_COMMUNITY"
-            ]
+            "type": "string"
           }
         ],
         "tags": [
